--- a/style2.css
+++ b/style2.css
@@ -1,166 +1,368 @@
+/* Standard CSS resets */ 
+
 html {
     box-sizing: border-box;
+    padding:0;
   }
   *, *:before, *:after {
     box-sizing: inherit;
+   
   }
 
-html {
-    max-width:1300px;
-    margin-left: 10%;
+
+
+body {
+    margin: 0;
+    background-color: #f8f9fa;
 }
 
-.container {
-    display:grid;
-    grid-template-rows: auto;
-    grid-template-columns: 220px 1fr 1fr 1fr;
-    grid-template-areas:   
-        'header header header header'
-        '. bio bio bio'
-        ' . projects projects projects';
-    
+
+/* Header section */ 
+
+.header-section {
+    background-color: #dc7c75;
+    color: white;
+    padding: 0 20px 2px 10px;
+}
+
+.off-white {
+    color:  rgb(237, 190, 186);
 }
 
 
 .header {
-    grid-area: header;
+    font-size: 1.6rem;
+}
+
+.header p {
     font-family: 'Montserrat';
-    font-size: 4em;
-}
-
-.about-craig {
-    grid-area: bio;
-    background-color: #ff9090;
-    display:flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    border-radius: 5px;
-    margin-top: 15px;
+    font-weight: 500;
+    font-size: 1rem;
+    padding-top: 30px;
+    margin-top: 0;
 
 }
 
-.about-craig p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.3em;
-}
-
-.image-placeholder {
-    width:200px;
-    height:200px;
-    flex: none;
-    margin-right:15px;
-}
-
-.craig-photo {
-    width: 200px;
-    height: auto;
-    border-radius: 5px;
-    padding: 10px;
-    position: sticky;
-    top:20px;
-    margin-top: 15px;
-    transition: all 400ms;
-
-}
-
-.craig-photo-scrolled {
-    width: 190px;    
-    height: auto;
-    margin-top: 0px;
-    padding: 0px;
-    transform: translateX(-210px);
-}
-
-.projects {
-    grid-area: projects;
-}
-
-.green-box {
-    position: fixed;
-    width: 210px;
-    height: 412px;
-    background-color:#80cbc4;
-    z-index: -1000;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-.green-box p {
-    margin-left: 20px;
-    opacity: 0%;
-    transition: opacity 400ms;
-}
-
-.greenbox-p-visible p {
-    opacity: 100%;
-}
-
-.my-work {
+.header h1 {
     font-family: 'Montserrat';
-    font-size: 4.5em;
-    margin-top: 40px;
-    margin-bottom: 20px;
-}
-
-.project-card {
-    width:100%;
-    background-color: #B8D4E3;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    display:grid;
-    grid-template-rows: auto;
-    grid-template-columns: 1.3fr .7fr;
-    grid-template-areas: 
-        'card-text image';
-    transition: all 250ms;
+    margin: 10px 0 10px 0;
     
 }
 
-.project-card:hover {
-    background-color: #fae7e7;
-    transform: scale(1.01);
-    transform:translateX(5px);
-}
 
-.project-card h3 {
-    align-self: flex-start;
+
+.header h3 { 
     font-family: 'Montserrat';
-    font-size: 2em;
-    margin-left:10px;
-    margin-top: 20px;
-    margin-bottom:0px;
+    margin: 10px 0;
+    animation-name: flow;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-delay: 1.5s;
+    background: linear-gradient(60deg, #ffffff 30%, #d43131 40%, 60%, #552586 70%, 90%,#ffffff 100%);
+    background-size: 300%;
+
+    -webkit-background-clip: text;
+        background-clip: text;
+    -webkit-text-fill-color: transparent;
+
 }
 
-.project-card .card-text {
-    margin-left: 10px;
-    grid-area: card-text;
+@keyframes flow {
+
+    0%  {background-position: 0% 0%;}
+    50% {background-position: 150% 0%;}
+    100% {background-position: 150% 0;}
+   
+
+
 }
 
-.project-card p {
-    margin-top: 5px;
-    margin-left: 10px;
-    font-size: 1.1em;   
-    font-family: 'Roboto', sans-serif;
-    max-width:80%;
+
+.about-craig p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1em;
+    line-height: 1.5;
+    font-weight: 300;
+   
+}
+
+.underlined-fancy {
+    -webkit-text-decoration: 1.2px darkturquoise solid underline;
+  text-decoration: 1.2px darkturquoise solid underline;
+  -webkit-text-decoration-skip: ink;
+  text-decoration-skip: ink;
+
+}
+
+
+/* GET IN TOUCH BUTTON */ 
+
+.get-in-touch-mobile, .get-in-touch-desktop { 
+    margin: 20px 10px 20px 10px;
+    background-color: #dc7c75;
+    height: 4rem;
+    border-radius: 6px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
+}
+
+.get-in-touch:hover {
+    background-color: #d89e9a;
+
+}
+
+.get-in-touch-mobile p, .get-in-touch-desktop p {
+
+    font-family: 'Montserrat';
+    font-weight: 700;
+    color: white;
+    font-size: 1.5rem;
+    margin: 0;
+    
+}
+
+/* Projects section */
+
+.projects .my-work {
+    padding-left: 10px;
+    font-family: 'Montserrat';
+    font-size: 2rem;
+}
+
+.project-card {
+    margin: 10px 20px 30px 20px;
+    padding: 5px 20px 10px 20px;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    border-radius: 7px;
+    
+
+}
+
+.card-text h3 {
+    font-family: 'Montserrat';
+    font-size: 1.7rem;
+}
+
+.card-text p, .card-text ul li {
+    font-family: 'Roboto';
+}
+
+.card-text ul li {
+    margin-bottom: 5px;
 }
 
 .project-card img {
-    grid-area: image;
-    margin: 20px;
-    border-radius: 1%;
+    max-width: 100%;
 }
 
-.project-card ul {
-    font-family: 'Roboto', sans-serif;
-    max-width: 80%;
+
+/* Education Section */
+
+.experience {
+    padding-top: 5px;
+    padding-left: 20px;
+    background-color: white;
+    font-family: 'Montserrat';
 }
 
-.project-card ul li {
-    padding-bottom: 5px;
+.experience h1 {
+    font-family: 'Montserrat';
 }
 
-h1 {
+
+.experience ul li {
+    font-family: 'Roboto';
+    line-height: 1.3rem;
+
+    padding-bottom: 2px;
+}
+
+.list-header {
+    font-family: 'Montserrat';
+}
+
+.view-cv-button-mobile, .view-cv-button-desktop {
+    margin: 20px 10px 20px 10px;
+    background-color: #dc7c75;
+    height: 4rem;
+    border-radius: 6px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.view-cv-button-mobile p, .view-cv-button-desktop {
+
+    font-family: 'Montserrat';
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 700;
     margin: 0;
+    
 }
+
+.craig-image, .get-in-touch-desktop, .view-cv-button-desktop {
+    display:none;
+}
+
+@media screen and (min-width: 550px) {
+
+.header-section {
+    padding: 0 40px 2px 40px;
+
+}
+
+.view-cv-button-mobile, .get-in-touch-mobile {
+    margin: 20px 20px 20px 20px;
+}
+
+.projects .my-work {
+    padding-left: 20px;
+}
+
+}
+
+
+@media screen and (min-width: 800px) {
+
+    .get-in-touch-mobile, .view-cv-button-mobile {
+        display:none;
+    }
+
+    .full-page {
+       
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: 300px 800px 1fr 1fr;
+        grid-template-areas:
+            "header header header header"
+            "craig-image-div projects projects ."
+            ". . . ."
+            ". exp exp ."
+            ". . . . "
+         ;
+    }
+   
+    
+
+    .craig-image-div {
+        grid-area: craig-image-div;
+        margin-top: -250px;
+        z-index: 10000000;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+
+    }
+    .craig-image {
+        display: inline-block;
+        grid-area: craig-image;
+        border-radius: 6px;
+        width: 200px;
+        position: sticky;
+        top:15px;
+        transition: all .3s;
+        border: 2px solid black;
+
+       
+    }
+
+    .craig-image:hover {
+        transform: rotate(-5deg); 
+    }
+    
+    .header-section {
+        grid-area: header;
+        display: grid;
+        grid-template-columns: 300px 800px 1fr;
+        grid-template-areas:
+        ". content"
+    }
+
+    .header-content {
+        grid-area: content;
+    }
+
+    .get-in-touch-desktop {
+        display: flex;
+        grid-area: get-in-touch;
+        position: sticky;
+        top:335px;
+        width: 200px;
+        height: 3em;
+        border-radius: 0px;
+        border: 2px solid black;
+    }
+
+    .get-in-touch-desktop p {
+        font-size: .8em;
+    }
+
+    .view-cv-button-desktop {
+        display:flex;
+        width: 200px;
+        grid-area: cv-button;
+        position: sticky;
+        top:410px;
+        height: 2em;
+        border-radius: 0px;
+        border: 2px solid black;
+    }
+
+    .view-cv-button-desktop p {
+        font-size: ;
+    }
+
+
+    .projects {
+        grid-area: projects;
+    }
+
+    .project-card {
+
+        height:;
+        transition: transform 200ms;
+
+        display:grid;
+        grid-template-rows: 2fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+            'card-copy card-img';
+        border-radius: 0px;
+    }
+
+    .project-card:hover {
+        transform: scale(1.017);
+     
+    }
+
+    .card-text {
+        grid-area: card-copy;
+    }
+
+    .project-card img {
+        grid-area: card-img;
+        padding-left: 20px; 
+        padding-right: 20px;
+        margin: auto 0;
+        max-width: 500px;
+    }
+
+
+
+    .experience {
+        grid-area: exp;
+    }
+    
+    }
